dont worry about it

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Pachabel's Canon</title>
+    <title>pachelbel's Canon</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
